# Workplace

./: .gitignore  README.md
EboBOT/: build.gradle  settings.gradle
EboBOT/gradle/wrapper/: gradle-wrapper.properties
EboBOT/src/main/java/danilo/laks/: Command.java  EboBOT.java  EventsMapper.java  TryURL.java
chat/: build.gradle
chat/gradle/wrapper/: gradle-wrapper.properties
chat/src/main/java/danilo/laks/: Main.java  State.java  TempClass.java  URLmapper.java
clion_disserproj/: CMakeLists.txt
clion_disserproj/headers/: allignment.h  fitnessCalculation.h  initialization.h  main.h  modification.h
clion_disserproj/src/: allignment.c  fitnessCalculation.c  initialization.c  main.c  modification.c
springEx/: build.gradle  settings.gradle
springEx/src/main/java/danilo/laks/: Main.java
springEx/src/main/java/danilo/laks/Bot/: Command.java  EboBOT.java  EventsMapper.java
springEx/src/main/java/danilo/laks/SpringMapping/: URLcontroller.java
springEx/src/main/resources/: application.properties
